# ReQCollect

./: .dockerignore  .env.example  .env.template  .gitignore  =0.6.23  AGENTS.md  CLAUDE.md  Dockerfile  README.md  __final_result.txt  _debug_out.txt  _debug_test.py  _diffstat.txt  _fix_task7.py  _gitlog.txt  _req123_part1.py  _req123_part2.py  deploy-frontend.sh  docker-compose.yml  gunicorn.conf.py  nginx.conf  pyproject.toml
.claude/: settings.json
.claude/hooks/: pge-auto-commit.sh
.claude/rules/: evaluate-phase.md  generate-phase.md  pge-workflow.md  plan-phase.md
.claude/skills/fix-github-issue-bugfix/: SKILL.md
.execution/: README.md
.execution/03-用户与权限/: plan.md  report.md  tasks.md
.execution/04-存储与数据/: plan.md  report.md  tasks.md
.execution/05-部署与运维/: plan.md  report.md  tasks.md
.execution/06-前端界面升级/: plan.md  report.md  tasks.md
.execution/07-导入与知识库/: plan.md  report.md  tasks.md
.execution/08-去技术化/: plan.md
.execution/08-提示词深度优化/: plan.md  report.md  tasks.md
.execution/09-PRD场景化动态大纲/: plan.md  report.md  tasks.md
.execution/10-画像字段权重场景化/: plan.md  report.md  tasks.md
.execution/11-用户管理界面升级/: plan.md  report.md  tasks.md
.execution/12-修复用户管理消失bug/: plan.md  tasks.md
.execution/13-工作空间/: plan.md  report.md  tasks.md
.execution/14-会话归属工作空间/: plan.md
.execution/at-file-reference/: plan.md  report.md  tasks.md
.execution/directory-linking-sync/: plan.md  report.md  tasks.md
.execution/fix-wiki-detail-ui/: report.md  tasks.md
.execution/fix-workspace-duplication/: plan.md  report.md  tasks.md
.execution/fix-workspace-navigation/: plan.md  tasks.md
.execution/model-refactor/: plan.md  report.md  tasks.md
.execution/pptx-image-parsing/: plan.md  tasks.md
.execution/prd-transparency/: plan.md  tasks.md
.execution/proposal-refine/: tasks.md
.execution/requirement-proposal/: plan.md  report.md  tasks.md
.execution/role-permissions/: plan.md  report.md  tasks.md
.execution/ui-polish/: plan.md  report.md  tasks.md
.execution/workspace-file-system/: report.md
.execution/workspace-members/: report.md  tasks.md
.execution/修复工作空间功能问题/: plan.md  report.md  tasks.md
.execution/工作空间功能检查/: report.md
.githooks/: post-commit
.superpowers/brainstorm/: sidebar-actions-v2.html  sidebar-tree-v2.html  sidebar-tree.html  user-mgmt-design.html
app/: config.py  main.py
app/agent/pm/: prompts.py  prompts_import.py  proposal_extractor.py  proposal_priority.py  state.py  tools.py
app/api/: auth.py  pm.py  wiki.py  wiki_ai.py  workspace.py
app/core/: auth.py  file_handler.py  llm_factory.py  milvus_client.py  workspace.py  workspace_analyzer.py  workspace_files.py
app/db/: __init__.py  compat.py  database.py  exceptions.py  models.py  repository.py
app/models/: pm.py
app/services/: document_splitter_service.py  pm_agent_service.py  vector_embedding_service.py  vector_index_service.py  vector_store_manager.py
app/tools/: __init__.py  knowledge_tool.py  time_tool.py
app/utils/: logger.py
docs/: git-hooks.md
docs/design-guidelines/: MIGRATION.md  README.md
docs/requirements/: README.md
docs/requirements/01-对话挖需引擎/: README.md
docs/requirements/02-PRD生成管线/: README-场景化动态大纲.md  README.md
reqcollect-web/: index.html  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
reqcollect-web/src/: App.vue  main.ts
reqcollect-web/src/api/: client.ts  (+8 more)
scripts/: init.sql  migrate_json_to_mysql.py
static/: index.html
tests/: conftest.py  test_api_pm.py  test_auth.py  test_db_repository.py  test_phase2_generator.py  test_phase2_planner.py  test_pm_agent_service.py  test_profile_extractor.py  test_state.py  test_sufficiency.py  test_tools.py  test_workspace_analyzer.py  test_workspace_files.py
(+76 files in other folders)
